--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -12,7 +12,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
-.card:hover {
+.card:active {
   border: 1px solid var(--primary);
 }
 
@@ -111,6 +111,10 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .card:hover {
+    border: 1px solid var(--primary);
+  }
+
   .price {
     font-size: 1.5rem;
   }
