--- a/components/elements/CartProduct/CartProduct.module.css
+++ b/components/elements/CartProduct/CartProduct.module.css
@@ -64,7 +64,7 @@
   font-size: 0.8rem;
   margin-left: 1rem;
 }
-.removeProductButton:hover {
+.removeProductButton:active {
   text-decoration: underline;
 }
 
@@ -122,6 +122,11 @@
   .imageContainer {
     width: 20rem;
   }
+
+  .removeProductButton:hover {
+    text-decoration: underline;
+  }
+
   .price {
     font-size: 1.5rem;
   }
