--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -5,7 +5,7 @@
   transition: border 150ms ease-out;
   border: 1px solid transparent;
 }
-.languageSwitcherButton:hover {
+.languageSwitcherButton:active {
   border: 1px solid var(--neutral-300);
 }
 
@@ -60,7 +60,7 @@
   transition: color 150ms ease-out, background-color 150ms ease-out;
   padding: 1rem;
 }
-.langButton:hover {
+.langButton:active {
   color: var(--neutral-900);
 }
 .activeCountry {
@@ -78,11 +78,19 @@
   .languageSwitcherButton {
     transform: translateX(0);
   }
+  .languageSwitcherButton:hover {
+    border: 1px solid var(--neutral-300);
+  }
+
   .langList {
     top: 2rem;
     bottom: unset;
     right: 0;
     left: unset;
+  }
+
+  .langButton:hover {
+    color: var(--neutral-900);
   }
 
   .active {
@@ -113,5 +121,17 @@
   100% {
     transform: scale(1);
     transform-origin: 100% 0%;
+  }
+}
+
+/**************************/
+/* PREFERS REDUCED MOTION */
+/**************************/
+@media (prefers-reduced-motion: reduce) {
+  .languageSwitcherButton {
+    transition: unset;
+  }
+  .langButton {
+    transition: unset;
   }
 }
