remove button fixed

--- a/components/elements/CartProduct/CartProduct.module.css
+++ b/components/elements/CartProduct/CartProduct.module.css
@@ -61,7 +61,7 @@
 }
 
 .removeProductButton {
-  display: flex;
+  height: max-content;
   color: var(--red);
   font-size: 0.8rem;
   margin-left: 1rem;
