--- a/components/modules/Header/Header.module.css
+++ b/components/modules/Header/Header.module.css
@@ -19,7 +19,7 @@
   justify-content: space-between;
 }
 
-.headerActions {
+.headerMobileActions {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -37,7 +37,7 @@
   .header {
     min-height: var(--top-desktop-header-height);
   }
-  .headerActions {
+  .headerMobileActions {
     display: none;
   }
 }
