--- a/components/elements/CartCount/CartCount.module.css
+++ b/components/elements/CartCount/CartCount.module.css
@@ -2,7 +2,7 @@
   display: inline-flex;
   position: relative;
   margin-right: 0.5rem;
-  vertical-align: sub;
+  vertical-align: bottom;
 }
 .cartCountContainer:active .cartSvg {
   fill: var(--primary);
@@ -33,7 +33,8 @@
   user-select: none;
 }
 .emptyCart {
-  display: none;
+  position: absolute;
+  transform: scale(0);
 }
 
 /**************************/
