--- a/styles/slider.css
+++ b/styles/slider.css
@@ -5,8 +5,9 @@
 .swiper-pagination-bullet {
   background-color: #fff;
   opacity: 1;
-  width: 0.7rem;
-  height: 0.7rem;
+  width: 1rem;
+  height: 1rem;
+  margin: 0 0.4rem !important;
 }
 .swiper-pagination-bullet-active {
   background-color: var(--primary);
@@ -15,6 +16,4 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.5rem;
 }
