--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,10 @@ html[color-scheme='dark'] {
   --valid: #60c689;
 }
 
+* {
+  user-select: none;
+}
+
 *:focus-visible {
   outline: solid #48cfe7 3px;
 }
@@ -65,6 +69,7 @@ html[color-scheme='dark'] {
 *:focus:not(:focus-visible) {
   outline: none;
 }
+
 html {
   font-size: 87.5%;
 }
@@ -153,7 +158,6 @@ p {
   position: absolute;
   border-radius: 50%;
   transform: translateZ(0);
-  user-select: none;
   background: radial-gradient(
     farthest-corner,
     rgba(255, 255, 255, 1) 40%,
