--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
 @import url('./reset.css');
-@import url('./fonts.css');
 @import url('./loader.css');
 @import url('./slider.css');
 @import url('./map.css');
@@ -59,6 +58,7 @@ html[color-scheme='dark'] {
 }
 
 * {
+  box-sizing: border-box;
   user-select: none;
 }
 
@@ -71,6 +71,8 @@ html[color-scheme='dark'] {
 }
 
 html {
+  padding: 0;
+  margin: 0;
   font-size: 87.5%;
 }
 
@@ -78,10 +80,8 @@ body,
 select,
 input,
 address {
-  font-family: 'Baloo 2', cursive, ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
-    Noto Color Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
