--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,12 +1,10 @@
 .languageSwitcherButton {
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
-  transition: border 150ms ease-out;
-  border: 1px solid transparent;
-}
-.languageSwitcherButton:active {
   border: 1px solid var(--neutral-300);
+  border-radius: var(--app-radius);
+  box-sizing: border-box;
+  padding: 0.5rem 0.5rem;
 }
 
 .flag {
@@ -26,6 +24,7 @@
   background-image: url('../../../public/images/flags/fr.webp');
 }
 .plainCountryName {
+  font-weight: 500;
   padding-right: 0.3rem;
 }
 
@@ -35,7 +34,7 @@
   border: 1px solid var(--neutral-300);
   border-radius: var(--app-radius);
   position: absolute;
-  bottom: 3rem;
+  bottom: 3.5rem;
   left: 0;
   min-width: 6rem;
   padding: 0.5rem;
@@ -78,12 +77,9 @@
   .languageSwitcherButton {
     transform: translateX(0);
   }
-  .languageSwitcherButton:hover {
-    border: 1px solid var(--neutral-300);
-  }
 
   .langList {
-    top: 2rem;
+    top: 3rem;
     bottom: unset;
     right: 0;
     left: unset;
@@ -128,9 +124,6 @@
 /* PREFERS REDUCED MOTION */
 /**************************/
 @media (prefers-reduced-motion: reduce) {
-  .languageSwitcherButton {
-    transition: unset;
-  }
   .langButton {
     transition: unset;
   }
