refacto not found title and sidePadding to appPadding

--- a/components/modules/MainContentLayout/MainContentLayout.module.css
+++ b/components/modules/MainContentLayout/MainContentLayout.module.css
@@ -8,3 +8,10 @@
   margin-right: auto;
   box-sizing: border-box;
 }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
