--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @import url('./loader.css');
 @import url('./slider.css');
 @import url('./map.css');
+@import url('./snowAnimation.css');
 
 :root {
   --primary: #6e4a2c;
@@ -86,16 +87,22 @@ address {
   font-weight: 400;
   line-height: 1.5rem;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 svg {
   transition: stroke 150ms ease-out, fill 150ms ease-out, color 150ms ease-out,
     background-color 150ms ease-out, transform 400ms ease-out;
   max-width: 1.7rem;
   max-height: 1.7rem;
   flex-shrink: 0;
+}
+
+p {
+  color: var(--neutral-600);
 }
 
 .app {
@@ -107,22 +114,6 @@ svg {
   background-color: var(--neutral-100);
   position: relative;
 }
-.center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.center h1 {
-  transform: translateY(-100%);
-  font-weight: 600;
-  color: var(--error);
-  text-align: center;
-}
-
-p {
-  color: var(--neutral-600);
-}
 
 .container {
   width: 100%;
@@ -131,8 +122,8 @@ p {
   margin-right: auto;
 }
 
-.sidePadding {
-  padding: 0 var(--app-mobile-padding);
+.appPadding {
+  padding: var(--app-mobile-padding);
   box-sizing: border-box;
 }
 
@@ -144,35 +135,17 @@ p {
   overflow-y: hidden;
 }
 
-/****************************/
-/* TEMPORARY SNOW ANIMATION */
-/****************************/
-.snowAnimation {
-  position: fixed;
-  width: 100%;
-  min-height: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 1;
-}
-.snowflake {
-  display: block;
-  position: absolute;
-  border-radius: 50%;
-  transform: translateZ(0);
-  background: radial-gradient(
-    farthest-corner,
-    rgba(255, 255, 255, 1) 40%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  z-index: 10000000;
+.errorTitle {
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
 @media screen and (min-width: 768px) {
-  .sidePadding {
+  .appPadding {
     padding: 0 var(--app-desktop-padding);
   }
 }
