--- a/components/elements/Loader/Loader.module.css
+++ b/components/elements/Loader/Loader.module.css
@@ -1,13 +1,25 @@
+.loaderContainer {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader {
   animation: spin 1.4s linear infinite;
 }
 
-.loadingCircle {
+.circle {
+  stroke: var(--neutral-900);
   stroke-dasharray: 187;
   stroke-dashoffset: 0;
   transform-origin: center;
-  animation: dash 1.4s var(--transition-easeInOut) infinite,
-    colors 5.6s var(--transition-easeInOut) infinite;
+  animation: dash 1.4s var(--transition-easeInOut) infinite;
 }
 
 /**************************/
@@ -22,14 +34,6 @@
   }
 }
 
-@keyframes colors {
-  0% {
-    stroke: var(--neutral-900);
-  }
-  100% {
-    stroke: var(--neutral-900);
-  }
-}
 @keyframes dash {
   0% {
     stroke-dashoffset: 187;
