--- a/components/modules/Slider/Slider.module.css
+++ b/components/modules/Slider/Slider.module.css
@@ -1,12 +1,9 @@
 .swiperContainer {
   width: 100%;
   height: 100%;
+  min-height: 10rem;
   max-height: 40rem;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.swiperLoading {
-  padding: 2rem;
 }
