border on button component added and bug tabIndex fixed

--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -3,6 +3,8 @@
   align-items: center;
   padding: 0.8rem 1rem;
   border-radius: var(--app-radius);
+  border: 1px solid transparent;
+  box-sizing: border-box;
   font-weight: 600;
   font-size: 1rem;
   text-transform: uppercase;
@@ -14,6 +16,12 @@
 
 .button:active {
   background-color: var(--primary-hover);
+}
+
+.border {
+  background-color: transparent;
+  border: 1px solid var(--primary);
+  color: var(--neutral-900);
 }
 
 .disable {
