--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -30,12 +30,13 @@
 }
 
 .badge {
-  width: max-content;
   position: absolute;
   top: 0;
   left: 0;
   padding: 0.2rem 0.5rem;
   box-sizing: border-box;
+  width: max-content;
+  font-size: 0.9rem;
   background-color: var(--primary);
   border-top-left-radius: var(--app-radius);
   color: var(--white);
