--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,8 +32,10 @@
 
   --transition-easeInOut: cubic-bezier(0.65, 0, 0.35, 1);
 
-  --top-mobile-header-height: 4.5rem;
-  --top-desktop-header-height: 6rem;
+  --mobile-top-header-height: 4.5rem;
+  --desktop-top-header-height: 6rem;
+
+  --mobile-top-nav-category-height: 3.5rem;
 
   --app-mobile-padding: 1rem;
   --app-desktop-padding: 1.5rem;
@@ -65,6 +67,7 @@ html[color-scheme='dark'] {
 
 *:focus-visible {
   outline: solid #48cfe7 3px;
+  scroll-margin: 2rem 0;
 }
 
 *:focus:not(:focus-visible) {
