z-index on scrollToTop button re-added

--- a/components/elements/buttons/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/components/elements/buttons/ScrollToTopButton/ScrollToTopButton.module.css
@@ -15,6 +15,7 @@
   transition: transform 150ms ease-out, background-color 150ms ease-out;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  z-index: 70;
 }
 .active {
   transform: scale(1);
