--- a/components/elements/buttons/ViewCartButton/ViewCartButton.module.css
+++ b/components/elements/buttons/ViewCartButton/ViewCartButton.module.css
@@ -24,7 +24,7 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .viewCartContainer {
-    display: none;
+    transform: scale(0);
   }
 }
 
