Loader position absolute or not added

--- a/components/elements/Loader/Loader.module.css
+++ b/components/elements/Loader/Loader.module.css
@@ -1,13 +1,17 @@
 .loaderContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.5rem;
+}
+.absoluteLoaderContainer {
   position: absolute;
   top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 0;
 }
 
 .loader {
