--- a/components/elements/CartProduct/CartProduct.module.css
+++ b/components/elements/CartProduct/CartProduct.module.css
@@ -64,6 +64,7 @@
   color: var(--red);
   font-size: 0.8rem;
   margin-left: 1rem;
+  position: relative;
 }
 .removeProductButton:active {
   text-decoration: underline;
