--- a/components/modules/Location/Location.module.css
+++ b/components/modules/Location/Location.module.css
@@ -1,10 +1,11 @@
 .locationContainer {
-  width: 100%;
-  height: 24rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-grow: 1;
+  width: 100%;
+  height: 24rem;
+  position: relative;
 }
 
 .mapContainer {
