--- a/components/modules/MenuCategories/MenuCategories.module.css
+++ b/components/modules/MenuCategories/MenuCategories.module.css
@@ -1,11 +1,15 @@
-.categoryList {
+.menuCategories {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.categoryList > li {
+.category {
+  scroll-margin-top: calc(
+    var(--mobile-top-header-height) + var(--mobile-top-nav-category-height) +
+      2rem
+  );
   width: 100%;
 }
 
@@ -18,10 +22,6 @@
   position: relative;
   z-index: 1;
   margin-left: 1rem;
-  scroll-margin-top: calc(
-    var(--mobile-top-header-height) + var(--mobile-top-nav-category-height) +
-      2rem
-  );
   font-size: 1.875rem;
 }
 
