--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 18rem;
   color: var(--neutral-600);
-  border: 1px solid var(--neutral-300);
+  border: 2px solid var(--neutral-100);
   border-radius: var(--app-radius);
   background-color: var(--neutral-50);
   transition: border 150ms ease-out;
@@ -13,7 +13,7 @@
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .card:active {
-  border: 1px solid var(--primary);
+  border: 2px solid var(--primary);
 }
 
 .imageContainer {
@@ -38,7 +38,7 @@
   width: max-content;
   font-size: 0.9rem;
   background-color: var(--primary);
-  border-top-left-radius: var(--app-radius);
+  border-top-left-radius: 0.2rem;
   color: var(--white);
 }
 
@@ -109,7 +109,7 @@
 
 @media screen and (min-width: 1024px) {
   .card:hover {
-    border: 1px solid var(--primary);
+    border: 2px solid var(--primary);
   }
 
   .price {
