--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -10,18 +10,19 @@
   text-transform: uppercase;
   background-color: var(--primary);
   color: var(--white);
-  transition: background-color 150ms ease-out;
+  transition: background-color 150ms ease-out, border 150ms ease-out;
   position: relative;
 }
 
 .button:active {
   background-color: var(--primary-hover);
+  border: 2px solid var(--primary-hover);
 }
 
 .border {
   background-color: transparent;
   border: 2px solid var(--neutral-600);
-  color: var(--neutral-900);
+  color: var(--neutral-600);
 }
 
 .disable {
@@ -42,8 +43,9 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .button:hover {
-    background-color: var(--primary-hover);
     color: var(--white);
+    background-color: var(--primary-hover);
+    border: 2px solid var(--primary-hover);
   }
 }
 
