--- a/components/elements/ProductCard/ProductCardCol/ProductCardCol.module.css
+++ b/components/elements/ProductCard/ProductCardCol/ProductCardCol.module.css
@@ -5,15 +5,37 @@
   width: 100%;
   height: 18rem;
   color: var(--neutral-600);
-  border: 2px solid var(--neutral-300);
+  border: 1px solid var(--neutral-300);
   border-radius: var(--app-radius);
   background-color: var(--neutral-50);
   transition: border 150ms ease-out;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
+
+.card:hover,
 .card:active {
-  border: 2px solid var(--primary);
+  border-color: var(--neutral-300);
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  left: -0.2rem;
+  top: -0.2rem;
+  width: 100%;
+  height: 100%;
+  border: 3px solid transparent;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-radius: var(--app-radius);
+  pointer-events: none;
+  transition: border-color 200ms;
+}
+.card:active::before {
+  border-color: var(--primary);
 }
 
 .imageContainer {
@@ -25,8 +47,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-top-left-radius: var(--app-radius);
-  border-top-right-radius: var(--app-radius);
 }
 
 .badge {
@@ -38,7 +58,6 @@
   width: max-content;
   font-size: 0.9rem;
   background-color: var(--primary);
-  border-top-left-radius: 0.2rem;
   color: var(--white);
 }
 
@@ -84,8 +103,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-sizing: border-box;
-  border-radius: var(--app-radius);
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.87);
@@ -108,8 +125,8 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .card:hover {
-    border: 2px solid var(--primary);
+  .card:hover::before {
+    border-color: var(--primary);
   }
 
   .price {
