--- a/components/modules/MenuCategories/MenuCategories.module.css
+++ b/components/modules/MenuCategories/MenuCategories.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 4rem;
 }
 
 .category {
@@ -11,6 +12,7 @@
       2rem
   );
   width: 100%;
+  padding: 3rem 0;
 }
 
 .heading {
@@ -48,5 +50,6 @@
       var(--mobile-top-header-height) + var(--mobile-top-nav-category-height) +
         3rem
     );
+    padding: 5em 0;
   }
 }
