--- a/components/modules/MenuCategories/MenuCategories.module.css
+++ b/components/modules/MenuCategories/MenuCategories.module.css
@@ -8,8 +8,7 @@
 
 .category {
   scroll-margin-top: calc(
-    var(--mobile-top-header-height) + var(--mobile-top-nav-category-height) +
-      2rem
+    var(--mobile-top-header-height) + var(--mobile-top-nav-category-height)
   );
   width: 100%;
   padding: 3rem 0;
@@ -48,8 +47,7 @@
   .category {
     scroll-margin-top: calc(
       var(--mobile-top-header-height) + var(--mobile-top-nav-category-height) +
-        3rem
+        1rem
     );
-    padding: 5em 0;
   }
 }
