--- a/components/modules/MenuCategories/MenuCategories.module.css
+++ b/components/modules/MenuCategories/MenuCategories.module.css
@@ -11,7 +11,6 @@
     var(--mobile-top-header-height) + var(--mobile-top-nav-category-height)
   );
   width: 100%;
-  padding: 3rem 0;
 }
 
 .heading {
@@ -19,6 +18,7 @@
   font-size: 1.875rem;
   position: relative;
   z-index: 0;
+  margin-top: 2rem;
 }
 
 .heading span {
