--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -39,6 +39,7 @@
   border-radius: var(--app-radius);
   min-width: 6rem;
   padding: 0.5rem;
+  box-shadow: var(--shadow-2);
 }
 
 .langList > li:not(:last-child) {
