--- a/components/elements/ProductCard/ProductCardCol/ProductCardCol.module.css
+++ b/components/elements/ProductCard/ProductCardCol/ProductCardCol.module.css
@@ -9,8 +9,7 @@
   border-radius: var(--app-radius);
   background-color: var(--neutral-50);
   transition: border 150ms ease-out;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: var(--shadow-1);
 }
 
 .card:hover,
