--- a/components/elements/ProductCard/ProductCardRow/ProductCardRow.module.css
+++ b/components/elements/ProductCard/ProductCardRow/ProductCardRow.module.css
@@ -5,8 +5,7 @@
   border: 1px solid var(--neutral-300);
   background-color: var(--neutral-50);
   height: 10rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: var(--shadow-1);
 }
 
 .imageContainer {
