--- a/components/elements/buttons/ViewCartButton/ViewCartButton.module.css
+++ b/components/elements/buttons/ViewCartButton/ViewCartButton.module.css
@@ -11,8 +11,8 @@
 }
 
 .viewCart {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  display: inline-block;
+  box-shadow: var(--shadow-1);
 }
 
 .active {
