--- a/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
+++ b/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
@@ -15,8 +15,7 @@
   width: 100%;
   height: var(--mobile-top-nav-category-height);
   overflow: auto;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: var(--shadow-1);
 }
 
 .navigation ul {
