--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,10 @@
   --white: #fafafa;
   --black: #121212;
 
+  --shadow-1: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  --shadow-2: rgba(43, 42, 51, 0.1) 0px 1px 6px 0px;
+
   --transition-easeInOut: cubic-bezier(0.65, 0, 0.35, 1);
 
   --mobile-top-header-height: 4.5rem;
@@ -58,6 +62,8 @@ html[color-scheme='dark'] {
 
   --error: #cf6676;
   --valid: #60c689;
+
+  --shadow-2: rgba(251, 251, 254, 0.2) 0px 1px 6px 0px;
 }
 
 * {
