--- a/components/modules/Footer/Footer.module.css
+++ b/components/modules/Footer/Footer.module.css
@@ -6,25 +6,25 @@
   border-top: 1px solid var(--neutral-300);
 }
 
-.blockContainer {
+.columnsContainer {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
 
-.block h3 {
+.column h3 {
   font-weight: 600;
   font-size: 1.25rem;
   padding: 1.5rem 0;
   color: var(--neutral-600);
 }
 
-.block li {
+.column li {
   font-size: 0.875rem;
   margin-bottom: 0.5rem;
   color: var(--neutral-600);
 }
-.block li:active {
+.column li:active {
   text-decoration: underline;
 }
 
@@ -32,12 +32,12 @@
 /****** MEDIA QUERIES *****/
 /**************************/
 @media screen and (min-width: 640px) {
-  .blockContainer {
+  .columnsContainer {
     flex-direction: row;
     justify-content: space-between;
   }
 
-  .block {
+  .column {
     text-align: center;
   }
 }
@@ -49,11 +49,11 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .blockContainer {
+  .columnsContainer {
     justify-content: space-around;
   }
 
-  .block li:hover {
+  .column li:hover {
     text-decoration: underline;
   }
 }
