--- a/pages/checkout/Checkout.module.css
+++ b/pages/checkout/Checkout.module.css
@@ -24,8 +24,9 @@
   display: flex;
   gap: 2rem;
 }
-.dateAndCvvContainer div {
-  flex: 1;
+
+.dateAndCvvContainer input {
+  width: 8rem;
 }
 
 .submiButton {
@@ -35,7 +36,7 @@
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 640px) {
   .fieldsetContainer {
     flex-direction: row;
   }
