--- a/components/elements/NavLink/NavLink.module.css
+++ b/components/elements/NavLink/NavLink.module.css
@@ -11,7 +11,7 @@
   top: calc(100% - 0.15rem);
   transition: transform 200ms ease-out;
   display: inline-block;
-  height: 0.15rem;
+  height: 2px;
   width: 100%;
   transform: translateX(-101%);
   background: var(--primary) none repeat scroll 0% 0%;
