--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   font-weight: 600;
   font-size: 1rem;
+  white-space: nowrap;
   text-transform: uppercase;
   background-color: var(--primary);
   color: var(--white);
