--- a/components/elements/Quantity/Quantity.module.css
+++ b/components/elements/Quantity/Quantity.module.css
@@ -7,7 +7,7 @@
 }
 
 .quantity {
-  font-size: 1.25rem;
+  font-size: var(--text-xl);
   width: 100%;
   min-width: 2.5rem;
   padding: 0.5rem;
@@ -23,7 +23,7 @@
 
 .addToCartButton span {
   margin-right: 0.5rem;
-  font-size: 1.5rem;
+  font-size: var(--text-2xl);
 }
 
 .minus,
@@ -32,7 +32,7 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  font-size: 1.5rem;
+  font-size: var(--text-2xl);
   padding: 0.5rem;
   width: 2.5rem;
   transition: color 150ms var(--transition-easeInOut);
@@ -56,7 +56,7 @@
 @media screen and (min-width: 1024px) {
   .minus,
   .plus {
-    font-size: 1.85rem;
+    font-size: var(--text-3xl);
   }
 
   .minus:hover,
