--- a/components/elements/buttons/BurgerMenuButton/BurgerMenuButton.module.css
+++ b/components/elements/buttons/BurgerMenuButton/BurgerMenuButton.module.css
@@ -6,7 +6,7 @@
   border: none;
   background-color: transparent;
   color: var(--neutral-600);
-  font-size: 1.125rem;
+  font-size: var(--text-lg);
 }
 
 .menuTitle {
