--- a/components/elements/CartCount/CartCount.module.css
+++ b/components/elements/CartCount/CartCount.module.css
@@ -25,7 +25,7 @@
   transform: translate(1.1rem, -0.6rem);
   width: 1.6rem;
   height: 1.6rem;
-  font-size: 0.938rem;
+  font-size: var(--text-sm);
   font-weight: 600;
   color: var(--white);
   background-color: var(--primary);
