--- a/components/modules/MenuCategories/MenuCategories.module.css
+++ b/components/modules/MenuCategories/MenuCategories.module.css
@@ -15,7 +15,7 @@
 
 .heading {
   color: var(--neutral-900);
-  font-size: 1.875rem;
+  font-size: var(--text-3xl);
   position: relative;
   z-index: 0;
   margin-top: 2rem;
