--- a/pages/checkout/Checkout.module.css
+++ b/pages/checkout/Checkout.module.css
@@ -16,7 +16,7 @@
   margin: 1rem 0;
   color: var(--neutral-900);
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: var(--text-2xl);
   line-height: 2rem;
 }
 
