--- a/pages/delivery/Delivery.module.css
+++ b/pages/delivery/Delivery.module.css
@@ -25,7 +25,7 @@
   justify-content: center;
   flex-grow: 1;
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: var(--text-2xl);
   color: var(--neutral-600);
   text-transform: uppercase;
   margin: 3rem 0;
