--- a/pages/product/Product.module.css
+++ b/pages/product/Product.module.css
@@ -23,13 +23,13 @@
   margin-bottom: 1.5rem;
 }
 .productPrice {
-  font-size: 2rem;
+  font-size: var(--text-3xl);
   margin: 1rem 0 1.5rem 0;
   color: var(--neutral-900);
 }
 
 .productH2 {
-  font-size: 1.25rem;
+  font-size: var(--text-xl);
   margin-bottom: 0rem;
   text-transform: capitalize;
   font-weight: 500;
@@ -69,7 +69,7 @@
   }
 
   .productPrice {
-    font-size: 2rem;
+    font-size: var(--text-3xl);
     margin: 2rem 0 2.5rem 0;
     color: var(--neutral-900);
   }
