--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,14 @@
 @import url('./snowAnimation.css');
 
 :root {
+  /* Font Size */
+  --text-3xl: clamp(1.625rem, 3.5vw, 1.875rem);
+  --text-2xl: clamp(1.25rem, 3.5vw, 1.5rem);
+  --text-xl: clamp(1.125rem, 3.5vw, 1.25rem);
+  --text-lg: clamp(1rem, 3.5vw, 1.125rem);
+  --text-base: clamp(0.875rem, 3.5vw, 1rem);
+  --text-sm: clamp(0.75rem, 3.5vw, 0.875rem);
+
   /* Color */
   --primary: #6e4a2c;
   --primary-hover: #422c1a;
@@ -89,7 +97,6 @@ html[color-scheme='light'] {
 html {
   padding: 0;
   margin: 0;
-  font-size: 87.5%;
   scroll-behavior: smooth !important;
 }
 
@@ -99,7 +106,7 @@ input,
 address {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 1rem;
+  font-size: var(--text-base);
   font-weight: 400;
   line-height: 1.5rem;
 }
