--- a/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
+++ b/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
@@ -22,9 +22,25 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
   height: 100%;
   padding: 0 var(--app-mobile-padding);
+}
+
+.navigation li {
+  display: flex;
+  border-radius: var(--app-radius);
+  transition: color 150ms var(--transition-easeInOut),
+    background-color 150ms var(--transition-easeInOut);
+}
+
+.navigation li.active {
+  background-color: var(--primary);
+  color: var(--white);
+}
+
+.link {
+  height: 100%;
+  padding: 0.5rem;
 }
 
 .navigation button {
@@ -34,11 +50,6 @@
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
-@media screen and (min-width: 768px) {
-  .navigation li {
-    padding: 0 var(--app-desktop-padding);
-  }
-}
 @media screen and (min-width: 1024px) {
   .navigation {
     top: var(--desktop-top-header-height);
@@ -47,10 +58,9 @@
 
   .navigation ul {
     justify-content: space-evenly;
-    gap: 0;
   }
 
-  .navigation a:hover {
+  .navigation li:not(.active):hover {
     color: var(--neutral-900);
   }
 }
