--- a/components/modules/Slider/Slider.module.css
+++ b/components/modules/Slider/Slider.module.css
@@ -1,11 +1,12 @@
 .swiperContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   min-height: 10rem;
   max-height: 40rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: var(--neutral-300);
 }
 
 .sliderImage {
