perfomance on CategoryNavigation improved

--- a/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
+++ b/components/modules/Navigation/CategoryNavigation/CategoryNavigation.module.css
@@ -16,7 +16,7 @@
   box-sizing: border-box;
 }
 
-.navigation ul {
+.navigation ol {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -54,7 +54,7 @@
     height: var(--mobile-top-nav-category-height);
   }
 
-  .navigation ul {
+  .navigation ol {
     justify-content: space-evenly;
   }
 
