--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,15 +97,24 @@ html[color-scheme='light'] {
 html {
   padding: 0;
   margin: 0;
-  scroll-behavior: smooth !important;
 }
 
 body,
 select,
 input,
 address {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
   font-size: var(--text-base);
   font-weight: 400;
   line-height: 1.5rem;
@@ -117,8 +126,12 @@ a {
 }
 
 svg {
-  transition: stroke 150ms ease-out, fill 150ms ease-out, color 150ms ease-out,
-    background-color 150ms ease-out, transform 400ms ease-out;
+  transition:
+    stroke 150ms ease-out,
+    fill 150ms ease-out,
+    color 150ms ease-out,
+    background-color 150ms ease-out,
+    transform 400ms ease-out;
   max-width: 1.7rem;
   max-height: 1.7rem;
   flex-shrink: 0;
